--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -623,7 +623,84 @@
                 // "log_l1_loss",
                 // "gaussian_nll",
                 // "laplacian_nll",
-                "--merge_aug", "4",
+                "--merge_aug", "2",
+                "-la",
+                "1.0",
+                // "100.0",
+                // "-wd", "0.001",
+                // "-lw", "0.1",
+                "-dw",
+                "4",
+                "-S2",
+                "-S1",
+                "-NIR",
+                "-f",
+                "16",
+                "-rse",
+                "-treg",
+                "pricp2",
+                // "-adv", 
+                // "-ladv", "0.01",
+                // "--classif", "v8",
+                // "--CORAL",
+                // "--lam_coral", "0.000001",
+                // "--MMD",
+                // "--lam_mmd", "0.1",
+                "-exZH",
+                // "--classifier", "v8",
+                // "-smo", "weaksup",
+                // "-mws", "10",
+                "--val", "1",
+                // "-clasif", "v12",
+                // "-adv",
+                // "-ladv", "0.001",
+                // "--full_aug"
+                // "-wma",
+            ]
+        },
+        {
+            "name": "train, smp, eval",
+            "type": "python",
+            "request": "launch",
+            "program": "run_eval.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args": [
+                "-dw", "4",
+                "-S2",
+                "-S1",
+                // "-NIR",
+                "-f", "16",
+                "-rse",
+                "-treg", "pricp2",
+                "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_616_114/last_model.pth"
+            ]
+        },
+        {
+            "name": "train, smp, finetune",
+            "type": "python",
+            "request": "launch",
+            "program": "run_train.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args": [
+                "-o",
+                "-s",
+                // "--max_samples", "20000",
+                "-e",
+                "200",
+                "-b",
+                "256",
+                "-lr",
+                "1e-4",
+                // "1e-4",
+                "-l",
+                "log_l1_aug_loss",
+                // "l1_loss",
+                // "log_l1_loss",
+                // "gaussian_nll",
+                // "laplacian_nll",
+                "--merge_aug", "2",
                 "-la",
                 "1.0",
                 // "100.0",
@@ -632,7 +709,7 @@
                 "-dw",
                 "4",
                 // "-S2",
-                // "-S2",
+                "-S2",
                 "-S1",
                 // "-NIR",
                 "-f",
@@ -644,14 +721,15 @@
                 // "-ladv", "0.01",
                 // "--classif", "v8",
                 // "--CORAL",
-                // "--lam_coral", "10000.0",
+                // "--lam_coral", "0.000001",
                 // "--MMD",
                 // "--lam_mmd", "0.1",
                 "-exZH",
                 // "--classifier", "v8",
-                // "-smo", "weaksup",
+                "-smo", "weaksup",
                 // "-mws", "10",
                 "--val", "1",
+                "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_584_486/best_model.pth",
                 // "-clasif", "v12",
                 // "-adv",
                 // "-ladv", "0.001",
