--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -633,17 +633,18 @@
                 "4",
                 "-S2",
                 "-S1",
-                "-NIR",
+                // "-NIR",
                 "-f",
                 "16",
                 "-rse",
                 "-treg",
                 "pricp2",
+                "--num_workers", "6",
                 // "-adv", 
-                // "-ladv", "0.01",
-                // "--classif", "v8",
-                "--CORAL",
-                "--lam_coral", "0.00001",
+                "-ladv", "0.01",
+                "--classif", "v8",
+                // "--CORAL",
+                // "--lam_coral", "0.01",
                 // "--MMD",
                 // "--lam_mmd", "0.1",
                 "-exZH",
@@ -656,10 +657,57 @@
                 // "-ladv", "0.001",
                 // "--full_aug"
                 // "-wma",
+                "--lr_step", "5",
+                "--lr_gamma", "0.75",
             ]
         },
         {
-            "name": "train, smp, eval",
+            "name": "train, boostUNet, debug",
+            "type": "python",
+            "request": "launch",
+            "program": "run_train.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args": [
+                "-o",
+                "-s",
+                // "--max_samples", "20000",
+                "-e",
+                "200",
+                "-b",
+                "256",
+                "-lr",
+                "1e-4",
+                "--model", "BoostUNet",
+                // "1e-4",
+                "-l",
+                "log_l1_aug_loss",
+                // "l1_loss",
+                // "log_l1_loss",
+                // "gaussian_nll",
+                // "laplacian_nll",
+                "--merge_aug", "2",
+                "-la",
+                "1.0",
+                "-dw","2",
+                "-dw2","4",
+                "-S2",
+                "-S1",
+                // "-NIR",
+                "-f",
+                "16",
+                "-rse",
+                "-treg",
+                "pricp2",
+                "-ladv", "0.01",
+                "-exZH",
+                "--val", "1",
+                "--lr_step", "5",
+                "--lr_gamma", "0.75",
+            ]
+        },
+        {
+            "name": "eval",
             "type": "python",
             "request": "launch",
             "program": "run_eval.py",
@@ -669,11 +717,11 @@
                 "-dw", "4",
                 "-S2",
                 "-S1",
-                "-NIR",
+                // "-NIR",
                 "-f", "16",
                 "-rse",
                 "-treg", "pricp2",
-                "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_619_377/last_model.pth"
+                "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_652_125/best_model.pth"
             ]
         },
         {
@@ -815,7 +863,7 @@
                 "1.0",
                 "-dw",
                 "4",
-                // "-S2",
+                "-S2",
                 "-S1",
                 // "-NIR",
                 "-f",
