--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -124,10 +124,10 @@
             "program": "utils/01_download_gee_country.py",
             "console": "integratedTerminal",
             "args": [
-                "-67.28203119204046", 
-                "17.874492216594003",
-                "-65.20561517641546",
-                "18.522873187515714",
+                "116.931", 
+                "4.225",
+                "126.958",
+                "20.593",
                 "phi", 
             ]
         }, 
@@ -164,14 +164,14 @@
             ]
         },
         {
-            "name": "03_merge_tiffs.py",
+            "name": "03_merge_tiffs.py, pri",
             "type": "python",
             "request": "launch",
             "program": "utils/03_merge_tiffs.py",
             "console": "integratedTerminal",
             "args": [
                 "/scratch2/metzgern/HAC/data/PopMapData/raw/EE/pricp2",
-                "/scratch2/metzgern/HAC/data/PopMapData/merged/EE/pricp2"
+                "/scratch/metzgern/HAC/data/PopMapData/merged/EE/pricp2"
             ]
         },
         {
@@ -182,7 +182,7 @@
             "console": "integratedTerminal",
             "args": [
                 "/scratch2/metzgern/HAC/data/PopMapData/raw/EE/rwa",
-                "/scratch/metzgern/HAC/data/PopMapData"
+                "/scratch/metzgern/HAC/data/PopMapData/merged/EE/rwa"
             ]
         },
         {
@@ -199,7 +199,7 @@
             ]
         },
         {
-            "name": "05_cut_tiles.py",
+            "name": "05_cut_tiles.py, pri",
             "type": "python",
             "request": "launch",
             "program": "utils/05_cut_tiles.py",
@@ -207,6 +207,18 @@
             "args": [
                 "/scratch/metzgern/HAC/data/PopMapData/merged/EE/pricp2",
                 "/scratch/metzgern/HAC/data/PopMapData/processed/EE/pricp2",
+                "100",
+            ]
+        },
+        {
+            "name": "05_cut_tiles.py, rwa",
+            "type": "python",
+            "request": "launch",
+            "program": "utils/05_cut_tiles.py",
+            "console": "integratedTerminal",
+            "args": [
+                "/scratch/metzgern/HAC/data/PopMapData/merged/EE/rwa",
+                "/scratch/metzgern/HAC/data/PopMapData/processed/EE/rwa",
                 "100",
             ]
         },
@@ -220,205 +232,6 @@
                 "/scratch2/metzgern/HAC/data/PopMapData/merged/EE/pricp2",
                 "/scratch2/metzgern/HAC/data/PopMapData/processed/EE/pricp2",
                 "100",
-            ]
-        },
-        {
-            "name": "debug train",
-            "type": "python",
-            "request": "launch",
-            "program": "run_train.py",
-            "console": "integratedTerminal",
-            "justMyCode": true,
-            "args": [
-                "--no-osm",
-                "--satmode",
-                "--max_samples",
-                "20000",
-                "--batch_size",
-                "64",
-                // "--in_memory",
-                "-lr",
-                "3e-5",
-                "--lr_step",
-                "10",
-                "--lam_builtmask",
-                "0.0",
-                // "--loss", "log_l1_loss"
-                "--model",
-                "JacobsUNet",
-                "--feature_extractor",
-                "vgg11",
-                // "--loss", "log_mse_loss", "l1_loss",
-                "--loss",
-                "log_mse_loss",
-                // "--lam", "1.0", "0.01",
-                "--lam",
-                "1.0",
-                "--lassoreg",
-                "0.0",
-                "-S1",
-                "-S2",
-                "-VIIRS",
-                "--feature_dim",
-                "64",
-                "--random_season",
-                "--target_regions",
-                "pri2017",
-                "--excludeZH",
-                "--save-dir",
-                "/scratch2/metzgern/HAC/POMELOv2_results"
-            ]
-        },
-        {
-            "name": "train, ResBlocksDeep",
-            "type": "python",
-            "request": "launch",
-            "program": "run_train.py",
-            "console": "integratedTerminal",
-            "justMyCode": true,
-            "args": [
-                "--no-osm",
-                "--satmode",
-                // "--max_samples", "5000",
-                "--num_epochs",
-                "1500",
-                "--lam_builtmask",
-                "0.0",
-                "--batch_size",
-                "128",
-                "--lr_step",
-                "10",
-                "-lr",
-                "1e-3",
-                "--lr_step",
-                "15",
-                // "--in_memory"
-                "--lr_gamma",
-                "0.75",
-                // "--weightdecay", "0.000001",
-                // "--feature_extractor", "resnet18",
-                // "--feature_extractor", "mobileone_s0",
-                "--model",
-                "ResBlocksDeep",
-                // "--feature_extractor", "resnet18",
-                // "--feature_extractor", "resnet50",
-                // "--merge_aug",
-                // "-S1",
-                // "--loss", "log_mse_loss", "mse_loss",
-                // "--loss", "log_mse_loss", "l1_loss",
-                "--loss",
-                "l1_loss", //"log_mse_loss",
-                // "--loss", "log_mse_loss",
-                // "--lam", "1.0", "0.00001",
-                // "--lam", "1.0", "0.005",
-                "--lam",
-                "1.0", //"10.0",
-                // "-S1",
-                "-S2",
-                "--feature_dim",
-                "48",
-                "--random_season",
-                "--target_regions",
-                "pri2017",
-                "--excludeZH",
-                "--save-dir",
-                "/scratch2/metzgern/HAC/POMELOv2_results"
-            ]
-        },
-        {
-            "name": "train, ResBlocks",
-            "type": "python",
-            "request": "launch",
-            "program": "run_train.py",
-            "console": "integratedTerminal",
-            "justMyCode": true,
-            "args": [
-                "--no-osm",
-                "--satmode",
-                // "--max_samples", "5000",
-                "--num_epochs",
-                "1500",
-                "--lam_builtmask",
-                "0.0",
-                "--batch_size",
-                "128",
-                "--lr_step",
-                "10",
-                "-lr",
-                "1e-3",
-                "--lr_step",
-                "15",
-                // "--in_memory"
-                "--lr_gamma",
-                "0.75",
-                // "--weightdecay", "0.000001", 
-                "--model",
-                "ResBlocks",
-                // "--merge_aug",
-                // "-S1",
-                // "--loss", "log_mse_loss", "mse_loss",
-                // "--loss", "log_mse_loss", "l1_loss",
-                "--loss",
-                "l1_loss", //"log_mse_loss",
-                // "--loss", "log_mse_loss",
-                // "--lam", "1.0", "0.00001",
-                // "--lam", "1.0", "0.005",
-                "--lam",
-                "1.0", //"10.0",
-                // "-S1",
-                "-S2",
-                "--feature_dim",
-                "96",
-                "--random_season",
-                "--target_regions",
-                "pri2017",
-                "--excludeZH",
-                "--save-dir",
-                "/scratch2/metzgern/HAC/POMELOv2_results"
-            ]
-        },
-        {
-            "name": "train, UResBlocks",
-            "type": "python",
-            "request": "launch",
-            "program": "run_train.py",
-            "console": "integratedTerminal",
-            "justMyCode": true,
-            "args": [
-                "--no-osm",
-                "--satmode",
-                // "--max_samples", "5000",
-                "--num_epochs",
-                "100",
-                "--lam_builtmask",
-                "0.0",
-                "--batch_size",
-                "384",
-                "--lr_step",
-                "10",
-                "-lr",
-                "1e-4",
-                "--lr_step",
-                "10",
-                // "--in_memory"
-                "--lr_gamma",
-                "0.75",
-                "--model",
-                "UResBlocks",
-                "--loss",
-                "l1_loss",
-                "--lam",
-                "1.0", //"10.0",
-                // "-S1",
-                "-S2",
-                "--feature_dim",
-                "64",
-                "--random_season",
-                "--target_regions",
-                "pri2017",
-                "--excludeZH",
-                "--save-dir",
-                "/scratch2/metzgern/HAC/POMELOv2_results"
             ]
         },
         {
@@ -473,149 +286,7 @@
             ]
         },
         {
-            "name": "train, smp",
-            "type": "python",
-            "request": "launch",
-            "program": "run_train.py",
-            "console": "integratedTerminal",
-            "justMyCode": false,
-            "args": [
-                "-o",
-                "-s",
-                // "--max_samples", "50000",
-                "-e",
-                "100",
-                "-b",
-                "128",
-                "-lr",
-                "1e-4",
-                "--loss",
-                "l1_loss",
-                "--lam",
-                "1",
-                "-S2",
-                "-S1",
-                "-NIR",
-                "-dw",
-                "2",
-                "-f",
-                "16",
-                "-rse",
-                "-treg",
-                "pri2017",
-                // "--CORAL",
-                // "--lam_coral", "1.0",
-                "-exZH",
-                "-smo",
-                "weaksup"
-            ]
-        },
-        {
-            "name": "train, ResBlocks2",
-            "type": "python",
-            "request": "launch",
-            "program": "run_train.py",
-            "console": "integratedTerminal",
-            "justMyCode": true,
-            "args": [
-                "--no-osm",
-                "--satmode",
-                // "--max_samples", "5000",
-                "--num_epochs",
-                "100",
-                "--lam_builtmask",
-                "0.0",
-                // "--batch_size", "192",
-                "--batch_size",
-                "384",
-                "--lr_step",
-                "10",
-                "-lr",
-                "1e-3",
-                "--lr_step",
-                "15",
-                // "--in_memory"
-                "--lr_gamma",
-                "0.75",
-                "--model",
-                "ResBlocks",
-                // "--feature_extractor", "vgg11",
-                // "-S1",
-                // "--loss", "log_mse_loss", "l1_loss",
-                "--loss",
-                "l1_loss",
-                "--lam",
-                "1",
-                // "--lam_adv", "100",
-                // "-S1",
-                "-S2",
-                "--feature_dim",
-                "16",
-                "--random_season",
-                "--target_regions",
-                "pri2017",
-                // "--adversarial",
-                "--excludeZH",
-                "--num_workers",
-                "5",
-                "--save-dir",
-                "/scratch2/metzgern/HAC/POMELOv2_results"
-            ]
-        },
-        {
-            "name": "train, UResBlocks",
-            "type": "python",
-            "request": "launch",
-            "program": "run_train.py",
-            "console": "integratedTerminal",
-            "justMyCode": true,
-            "args": [
-                "--no-osm",
-                "--satmode",
-                // "--max_samples", "5000",
-                "--num_epochs",
-                "100",
-                "--lam_builtmask",
-                "0.0",
-                // "--batch_size", "192",
-                "--batch_size",
-                "384",
-                "--lr_step",
-                "10",
-                "-lr",
-                "1e-4",
-                "--lr_step",
-                "15",
-                // "--in_memory"
-                "--lr_gamma",
-                "0.75",
-                "--model",
-                "UResBlocks",
-                // "--feature_extractor", "vgg11",
-                // "-S1",
-                // "--loss", "log_mse_loss", "l1_loss",
-                "--loss",
-                "l1_loss",
-                "--lam",
-                "1",
-                // "--lam_adv", "100",
-                // "-S1",
-                "-S2",
-                "--feature_dim",
-                "16",
-                "--random_season",
-                "--target_regions",
-                "pri2017",
-                // "--adversarial",
-                "--excludeZH",
-                "--num_workers",
-                "5",
-                "--save-dir",
-                "/scratch2/metzgern/HAC/POMELOv2_results"
-            ]
-        },
-        {
-            "name": "train, smp, debug",
+            "name": "train, smp, jacobs, debug",
             "type": "python",
             "request": "launch",
             "program": "run_train.py",
@@ -628,12 +299,14 @@
                 "-e",
                 "200",
                 "-b",
-                "256",
+                "64",
                 "-lr",
-                "1e-4",
+                "3e-6",
+                "--model", "JacobsUNet",
                 // "1e-4",
                 "-l",
                 "log_l1_aug_loss",
+                // "log_l1_loss",
                 // "l1_loss",
                 // "log_l1_loss",
                 // "gaussian_nll",
@@ -641,12 +314,10 @@
                 "--merge_aug", "2",
                 "-la",
                 "1.0",
-                // "100.0",
-                // "-wd", "0.001",
-                // "-lw", "0.1",
-                "-dw",
-                "4",
-                "-S2",
+                // "0.1",
+                "-dw","3",
+                // "-dw2","3",
+                // "-S2",
                 "-S1",
                 // "-NIR",
                 "-f",
@@ -654,26 +325,22 @@
                 "-rse",
                 "-treg",
                 "pricp2",
+                // "-ladv", "0.01",
+                "-exZH",
+                "--val", "1",
+                "--lr_step", "5",
+                "--lr_gamma", "0.75",
+                "--full_aug",
+                // "--CORAL",
+                // "--lam_coral", "10.0",
                 "--num_workers", "6",
+                // "--useallfeatures",
+                // "--lam_coral", "1.0",
                 // "-adv", 
                 // "-ladv", "0.01",
                 // "--classif", "v8",
-                // "--CORAL",
-                // "--lam_coral", "0.01",
                 // "--MMD",
-                // "--lam_mmd", "0.1",
-                "-exZH",
-                // "--classifier", "v8",
-                // "-smo", "weaksup",
-                // "-mws", "10",
-                "--val", "1",
-                // "-clasif", "v12",
-                // "-adv",
-                // "-ladv", "0.001",
-                // "--full_aug"
-                // "-wma",
-                "--lr_step", "5",
-                "--lr_gamma", "0.75",
+                // "--lam_mmd", "10.0",
             ]
         },
         {
@@ -692,11 +359,14 @@
                 "-b",
                 "128",
                 "-lr",
-                "1e-4",
+                "1e-5",
+                // "3e-6",
                 "--model", "BoostUNet",
+                // "--model", "JacobsUNet",
                 // "1e-4",
                 "-l",
                 "log_l1_aug_loss",
+                // "l1_aug_loss",
                 // "log_l1_loss",
                 // "l1_loss",
                 // "log_l1_loss",
@@ -706,8 +376,8 @@
                 "-la",
                 "1.0",
                 // "0.1",
-                "-dw","3",
-                "-dw2","3",
+                "-dw","2",
+                "-dw2","4",
                 "-S2",
                 "-S1",
                 // "-NIR",
@@ -722,15 +392,20 @@
                 "--lr_step", "5",
                 "--lr_gamma", "0.75",
                 "--full_aug",
-                "--CORAL",
-                "--lam_coral", "10.0",
+                // "--CORAL",
+                // "--lam_coral", "10.0",
                 "--num_workers", "6",
+                // "--useallfeatures",
                 // "--lam_coral", "1.0",
                 // "-adv", 
                 // "-ladv", "0.01",
                 // "--classif", "v8",
                 // "--MMD",
-                // "--lam_mmd", "1.0",
+                // "--lam_mmd", "10.0",
+                "--seed", "1612",
+                "-gc", "0.001",
+                // "--lam_raw", "0.3.",
+                // "--occupancymodel"
             ]
         },
         {
