--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -299,9 +299,9 @@
                 "-e",
                 "200",
                 "-b",
-                "64",
+                "128",
                 "-lr",
-                "3e-6",
+                "1e-4",
                 "--model", "JacobsUNet",
                 // "1e-4",
                 "-l",
@@ -317,7 +317,7 @@
                 // "0.1",
                 "-dw","3",
                 // "-dw2","3",
-                // "-S2",
+                "-S2",
                 "-S1",
                 // "-NIR",
                 "-f",
@@ -349,7 +349,7 @@
             "request": "launch",
             "program": "run_train.py",
             "console": "integratedTerminal",
-            "justMyCode": true,
+            "justMyCode": false,
             "args": [
                 "-o",
                 "-s",
@@ -397,6 +397,72 @@
                 "--num_workers", "6",
                 // "--useallfeatures",
                 // "--lam_coral", "1.0",
+                "-adv", 
+                "-ladv", "0.01",
+                // "--classif", "v8",
+                // "--MMD",
+                // "--lam_mmd", "10.0",
+                "--seed", "1612",
+                "-gc", "0.001",
+                // "--lam_raw", "0.3.",
+                // "--occupancymodel",
+                // "--stochasticWA"
+            ]
+        },
+        {
+            "name": "train, boostUNet, debug, gaussian_nll",
+            "type": "python",
+            "request": "launch",
+            "program": "run_train.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [
+                "-o",
+                "-s",
+                // "--max_samples", "20000",
+                "-e",
+                "200",
+                "-b",
+                "128",
+                "-lr",
+                "1e-5",
+                // "3e-6",
+                "--model", "BoostUNet",
+                // "--model", "JacobsUNet",
+                // "1e-4",
+                "-l",
+                // "log_l1_aug_loss",
+                // "l1_aug_loss",
+                // "log_l1_loss",
+                // "l1_loss",
+                // "log_l1_loss",
+                "log_gaussian_aug_loss",
+                // "laplacian_nll",
+                "--merge_aug", "2",
+                "-la",
+                "1.0",
+                // "0.1",
+                "-dw","2",
+                "-dw2","4",
+                "-S2",
+                "-S1",
+                // "-NIR",
+                "-f",
+                "16",
+                "-rse",
+                "-treg",
+                "pricp2",
+                // "-ladv", "0.01",
+                "-exZH",
+                "--val", "1",
+                "--lr_step", "5",
+                "--lr_gamma", "0.75",
+                "--full_aug",
+                // "--CORAL",
+                // "--lam_coral", "10.0",
+                "--num_workers", "6",
+                // "--useallfeatures",
+                // "--lam_coral", "1.0",
                 // "-adv", 
                 // "-ladv", "0.01",
                 // "--classif", "v8",
@@ -405,7 +471,8 @@
                 "--seed", "1612",
                 "-gc", "0.001",
                 // "--lam_raw", "0.3.",
-                // "--occupancymodel"
+                // "--occupancymodel",
+                // "--stochasticWA"
             ]
         },
         {
