--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -305,9 +305,9 @@
                 "--model", "JacobsUNet",
                 // "1e-4",
                 "-l",
-                "log_l1_aug_loss",
+                // "log_l1_aug_loss",
                 // "log_l1_loss",
-                // "l1_loss",
+                "l1_loss",
                 // "log_l1_loss",
                 // "gaussian_nll",
                 // "laplacian_nll",
