sync code RWA, PRI

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -358,16 +358,17 @@
                 "-b",
                 "128",
                 "-lr",
+                // "1e-5",
                 "1e-5",
                 // "3e-6",
                 "--model", "BoostUNet",
                 // "--model", "JacobsUNet",
                 // "1e-4",
                 "-l",
-                "log_l1_aug_loss",
+                // "log_l1_aug_loss",
                 // "l1_aug_loss",
                 // "log_l1_loss",
-                // "l1_loss",
+                "l1_loss",
                 // "log_l1_loss",
                 // "gaussian_nll",
                 // "laplacian_nll",
@@ -376,7 +377,7 @@
                 "1.0",
                 // "0.1",
                 "-dw","4",
-                "-dw2","2",
+                "-dw2","1",
                 "-S2",
                 "-S1",
                 // "-NIR",
@@ -404,6 +405,7 @@
                 // "--lam_mmd", "10.0",
                 "--seed", "1612",
                 "-gc", "0.001",
+                // "--eu2rwa"
                 // "--lam_raw", "0.3.",
                 // "--occupancymodel",
                 // "--stochasticWA"
@@ -510,7 +512,8 @@
                 // "-NIR",
                 "-f", "16",
                 // "-rse",
-                "-treg", "rwa",
+                "--fourseasons",
+                "-treg", "rwa", "pricp2",
                 "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_905_626/best_model.pth"
             ]
         },
