--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -412,6 +412,64 @@
             ]
         },
         {
+            "name": "train, boostUNet, debug, CyCADA",
+            "type": "python",
+            "request": "launch",
+            "program": "run_train.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [
+                "-o",
+                "-s",
+                // "--max_samples", "1000",
+                "-e",
+                "200",
+                "-b",
+                "128",
+                "-lr", 
+                "1e-5", 
+                "--model", "BoostUNet",  
+                "-l",
+                "log_l1_aug_loss", 
+                "--merge_aug", "2",
+                "-la",
+                "1.0",
+                // "0.1",
+                "-dw","4",
+                "-dw2","1",
+                "-S2",
+                "-S1",
+                // "-NIR",
+                "-f",
+                "16",
+                "-rse",
+                "-treg",
+                "pricp2",
+                // "rwa",
+                // "-ladv", "0.01",
+                "-exZH",
+                "--val", "1",
+                "--lr_step", "5",
+                "--lr_gamma", "0.75",
+                "--full_aug",
+                // "--CORAL",
+                // "--lam_coral", "10.0",
+                "--num_workers", "6",
+                // "--useallfeatures",
+                // "--lam_coral", "1.0",
+                // "-adv", 
+                // "-ladv", "0.01",
+                // "--classif", "v8",
+                // "--MMD",
+                // "--lam_mmd", "10.0",
+                "--seed", "1612",
+                "-gc", "0.001",
+                // "--CyCADA",
+                "--CyCADASourcecheckpoint", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_905_626/best_model.pth",
+                // "--eu2rwa" 
+            ]
+        },
+        {
             "name": "train, boostUNet, debug, gaussian_nll",
             "type": "python",
             "request": "launch",
@@ -444,8 +502,8 @@
                 "-la",
                 "1.0",
                 // "0.1",
-                "-dw","2",
-                "-dw2","4",
+                "-dw","4",
+                "-dw2","1",
                 "-S2",
                 "-S1",
                 // "-NIR",
