--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -405,14 +405,14 @@
                 // "--lam_mmd", "10.0",
                 "--seed", "1612",
                 "-gc", "0.001",
-                // "--eu2rwa"
+                "--eu2rwa"
                 // "--lam_raw", "0.3.",
                 // "--occupancymodel",
                 // "--stochasticWA"
             ]
         },
         {
-            "name": "train, boostUNet, debug, CyCADA",
+            "name": "train, boostUNet, debug, CyCADA,...",
             "type": "python",
             "request": "launch",
             "program": "run_train.py",
@@ -421,11 +421,11 @@
             "args": [
                 "-o",
                 "-s",
-                // "--max_samples", "1000",
+                "--max_samples", "2500",
                 "-e",
                 "200",
                 "-b",
-                "128",
+                "4",
                 "-lr", 
                 "1e-5", 
                 "--model", "BoostUNet",  
@@ -435,8 +435,8 @@
                 "-la",
                 "1.0",
                 // "0.1",
-                "-dw","4",
-                "-dw2","1",
+                "-dw","2",
+                "-dw2","4",
                 "-S2",
                 "-S1",
                 // "-NIR",
@@ -444,9 +444,8 @@
                 "16",
                 "-rse",
                 "-treg",
-                "pricp2",
-                // "rwa",
-                // "-ladv", "0.01",
+                // "pricp2",
+                "rwa", 
                 "-exZH",
                 "--val", "1",
                 "--lr_step", "5",
@@ -457,15 +456,27 @@
                 "--num_workers", "6",
                 // "--useallfeatures",
                 // "--lam_coral", "1.0",
-                // "-adv", 
-                // "-ladv", "0.01",
+                "-adv", 
+                "-ladv", "0.001",
                 // "--classif", "v8",
                 // "--MMD",
                 // "--lam_mmd", "10.0",
                 "--seed", "1612",
                 "-gc", "0.001",
-                // "--CyCADA",
+                "--CyCADA",
                 "--CyCADASourcecheckpoint", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_905_626/best_model.pth",
+                "--CyCADAGANcheckpoint", "eu2rwa_cycleganFreeze2",
+                "--lam_selfsupervised_consistency", "1.0",
+                // "--lam_selfsupervised_consistency", "0.0",
+                "--lam_targetconsistency", "1.0",
+                // "--lam_targetconsistency", "0.0",
+                "--lambda_consistencyB", "1.0",
+                // "--lambda_consistencyB", "0.0",
+                // "--lambda_popB", "1.0",
+                "--lambda_popB", "0.1",
+                "--CyCADAnetG", "resnet_6blocks",
+                // "--GANonly",
+                // "--CyCADAcontinue", 
                 // "--eu2rwa" 
             ]
         },
