diff check commit

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -470,7 +470,8 @@
                 // "--lam_selfsupervised_consistency", "0.0",
                 "--lam_targetconsistency", "1.0",
                 // "--lam_targetconsistency", "0.0",
-                "--lambda_consistencyB", "1.0",
+                "--lambda_consistency_fake_B", "1.0",
+                "--lambda_consistency_real_B", "1.0",
                 // "--lambda_consistencyB", "0.0",
                 // "--lambda_popB", "1.0",
                 "--lambda_popB", "0.1",
