upload new code

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -421,11 +421,11 @@
             "args": [
                 "-o",
                 "-s",
-                "--max_samples", "2500",
+                // "--max_samples", "2500",
                 "-e",
                 "200",
                 "-b",
-                "4",
+                "32",
                 "-lr", 
                 "1e-5", 
                 "--model", "BoostUNet",  
@@ -456,8 +456,8 @@
                 "--num_workers", "6",
                 // "--useallfeatures",
                 // "--lam_coral", "1.0",
-                "-adv", 
-                "-ladv", "0.001",
+                // "-adv", 
+                // "-ladv", "0.001",
                 // "--classif", "v8",
                 // "--MMD",
                 // "--lam_mmd", "10.0",
@@ -471,10 +471,10 @@
                 "--lam_targetconsistency", "1.0",
                 // "--lam_targetconsistency", "0.0",
                 "--lambda_consistency_fake_B", "1.0",
-                "--lambda_consistency_real_B", "1.0",
+                "--lambda_consistency_real_B", "100.0",
                 // "--lambda_consistencyB", "0.0",
                 // "--lambda_popB", "1.0",
-                "--lambda_popB", "0.1",
+                "--lambda_popB", "10.0",
                 "--CyCADAnetG", "resnet_6blocks",
                 // "--GANonly",
                 // "--CyCADAcontinue", 
