--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -421,7 +421,7 @@
             "args": [
                 "-o",
                 "-s",
-                // "--max_samples", "2500",
+                "--max_samples", "200",
                 "-e",
                 "200",
                 "-b",
